--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "frontend boilerplate",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-uglify": "^0.7.0"
   }
 }
