--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.7.0"
   }
